// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/layout/demo/basic.md correctly 1`] = `
<div>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
    >
      Header
    </header>
    <main
      class="ant-layout-content"
    >
      Content
    </main>
    <footer
      class="ant-layout-footer"
    >
      Footer
    </footer>
  </section>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
    >
      Header
    </header>
    <section
      class="ant-layout"
    >
      <aside
        class="ant-layout-sider ant-layout-sider-dark"
        style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          Sider
        </div>
      </aside>
      <main
        class="ant-layout-content"
      >
        Content
      </main>
    </section>
    <footer
      class="ant-layout-footer"
    >
      Footer
    </footer>
  </section>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
    >
      Header
    </header>
    <section
      class="ant-layout"
    >
      <main
        class="ant-layout-content"
      >
        Content
      </main>
      <aside
        class="ant-layout-sider ant-layout-sider-dark"
        style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          Sider
        </div>
      </aside>
    </section>
    <footer
      class="ant-layout-footer"
    >
      Footer
    </footer>
  </section>
  <section
    class="ant-layout"
  >
    <aside
      class="ant-layout-sider ant-layout-sider-dark"
      style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
    >
      <div
        class="ant-layout-sider-children"
      >
        Sider
      </div>
    </aside>
    <section
      class="ant-layout"
    >
      <header
        class="ant-layout-header"
      >
        Header
      </header>
      <main
        class="ant-layout-content"
      >
        Content
      </main>
      <footer
        class="ant-layout-footer"
      >
        Footer
      </footer>
    </section>
  </section>
</div>
`;

exports[`renders ./components/layout/demo/custom-trigger.md correctly 1`] = `
<section
  class="ant-layout"
>
  <aside
    class="ant-layout-sider ant-layout-sider-dark"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: user"
            class="anticon anticon-user"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#user"
              />
            </svg>
          </i>
          <span>
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: video-camera"
            class="anticon anticon-video-camera"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#video-camera"
              />
            </svg>
          </i>
          <span>
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: upload"
            class="anticon anticon-upload"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#upload"
              />
            </svg>
          </i>
          <span>
            nav 3
          </span>
        </li>
      </ul>
    </div>
  </aside>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
      style="background:#fff;padding:0"
    >
      <i
        aria-label="icon: menu-fold"
        class="anticon anticon-menu-fold trigger"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#menu-fold"
          />
        </svg>
      </i>
    </header>
    <main
      class="ant-layout-content"
      style="margin:24px 16px;padding:24px;background:#fff;min-height:280px"
    >
      Content
    </main>
  </section>
</section>
`;

exports[`renders ./components/layout/demo/fixed.md correctly 1`] = `
<section
  class="ant-layout"
>
  <header
    class="ant-layout-header"
    style="position:fixed;z-index:1;width:100%"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </header>
  <main
    class="ant-layout-content"
    style="padding:0 50px;margin-top:64px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      style="background:#fff;padding:24px;min-height:380px"
    >
      Content
    </div>
  </main>
  <footer
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </footer>
</section>
`;

exports[`renders ./components/layout/demo/fixed-sider.md correctly 1`] = `
<section
  class="ant-layout"
>
  <aside
    class="ant-layout-sider ant-layout-sider-dark"
    style="overflow:auto;height:100vh;position:fixed;left:0;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: user"
            class="anticon anticon-user"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#user"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: video-camera"
            class="anticon anticon-video-camera"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#video-camera"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: upload"
            class="anticon anticon-upload"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#upload"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 3
          </span>
        </li>
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: bar-chart"
            class="anticon anticon-bar-chart"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#bar-chart"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 4
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: cloud-o"
            class="anticon anticon-cloud-o"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#cloud-o"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 5
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: appstore-o"
            class="anticon anticon-appstore-o"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#appstore-o"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 6
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: team"
            class="anticon anticon-team"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#team"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 7
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: shop"
            class="anticon anticon-shop"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#shop"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 8
          </span>
        </li>
      </ul>
    </div>
  </aside>
  <section
    class="ant-layout"
    style="margin-left:200px"
  >
    <header
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <main
      class="ant-layout-content"
      style="margin:24px 16px 0;overflow:initial"
    >
      <div
        style="padding:24px;background:#fff;text-align:center"
      >
        ...
        <br />
        Really
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        long
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        content
      </div>
    </main>
    <footer
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </footer>
  </section>
</section>
`;

exports[`renders ./components/layout/demo/responsive.md correctly 1`] = `
<section
  class="ant-layout"
>
  <aside
    class="ant-layout-sider ant-layout-sider-dark"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: user"
            class="anticon anticon-user"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#user"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: video-camera"
            class="anticon anticon-video-camera"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#video-camera"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: upload"
            class="anticon anticon-upload"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#upload"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 3
          </span>
        </li>
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: user"
            class="anticon anticon-user"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#user"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 4
          </span>
        </li>
      </ul>
    </div>
  </aside>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <main
      class="ant-layout-content"
      style="margin:24px 16px 0"
    >
      <div
        style="padding:24px;background:#fff;min-height:360px"
      >
        content
      </div>
    </main>
    <footer
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </footer>
  </section>
</section>
`;

exports[`renders ./components/layout/demo/side.md correctly 1`] = `
<section
  class="ant-layout"
  style="min-height:100vh"
>
  <aside
    class="ant-layout-sider ant-layout-sider-dark ant-layout-sider-has-trigger"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: pie-chart"
            class="anticon anticon-pie-chart"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#pie-chart"
              />
            </svg>
          </i>
          <span>
            Option 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: desktop"
            class="anticon anticon-desktop"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#desktop"
              />
            </svg>
          </i>
          <span>
            Option 2
          </span>
        </li>
        <li
          class="ant-menu-submenu ant-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            style="padding-left:24px"
          >
            <span>
              <i
                aria-label="icon: user"
                class="anticon anticon-user"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#user"
                  />
                </svg>
              </i>
              <span>
                User
              </span>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
        <li
          class="ant-menu-submenu ant-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            style="padding-left:24px"
          >
            <span>
              <i
                aria-label="icon: team"
                class="anticon anticon-team"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#team"
                  />
                </svg>
              </i>
              <span>
                Team
              </span>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            aria-label="icon: file"
            class="anticon anticon-file"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#file"
              />
            </svg>
          </i>
          <span>
            File
          </span>
        </li>
      </ul>
    </div>
    <div
      class="ant-layout-sider-trigger"
      style="width:200px"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#left"
          />
        </svg>
      </i>
    </div>
  </aside>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <main
      class="ant-layout-content"
      style="margin:0 16px"
    >
      <div
        class="ant-breadcrumb"
        style="margin:16px 0"
      >
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            User
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            Bill
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <div
        style="padding:24px;background:#fff;min-height:360px"
      >
        Bill is a cat.
      </div>
    </main>
    <footer
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </footer>
  </section>
</section>
`;

exports[`renders ./components/layout/demo/top.md correctly 1`] = `
<section
  class="layout ant-layout"
>
  <header
    class="ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </header>
  <main
    class="ant-layout-content"
    style="padding:0 50px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      style="background:#fff;padding:24px;min-height:280px"
    >
      Content
    </div>
  </main>
  <footer
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </footer>
</section>
`;

exports[`renders ./components/layout/demo/top-side.md correctly 1`] = `
<section
  class="ant-layout"
>
  <header
    class="header ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </header>
  <main
    class="ant-layout-content"
    style="padding:0 50px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <section
      class="ant-layout"
      style="padding:24px 0;background:#fff"
    >
      <aside
        class="ant-layout-sider ant-layout-sider-dark"
        style="background:#fff;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          <ul
            class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
            role="menu"
            style="height:100%"
          >
            <li
              class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
              role="menuitem"
            >
              <div
                aria-expanded="true"
                aria-haspopup="true"
                aria-owns="sub1$Menu"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    aria-label="icon: user"
                    class="anticon anticon-user"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#user"
                      />
                    </svg>
                  </i>
                  subnav 1
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <ul
                class="ant-menu  ant-menu-sub ant-menu-inline"
                id="sub1$Menu"
                role="menu"
              >
                <li
                  class="ant-menu-item ant-menu-item-selected"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option1
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option2
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option3
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option4
                </li>
              </ul>
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    aria-label="icon: laptop"
                    class="anticon anticon-laptop"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#laptop"
                      />
                    </svg>
                  </i>
                  subnav 2
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    aria-label="icon: notification"
                    class="anticon anticon-notification"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#notification"
                      />
                    </svg>
                  </i>
                  subnav 3
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
          </ul>
        </div>
      </aside>
      <main
        class="ant-layout-content"
        style="padding:0 24px;min-height:280px"
      >
        Content
      </main>
    </section>
  </main>
  <footer
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </footer>
</section>
`;

exports[`renders ./components/layout/demo/top-side-2.md correctly 1`] = `
<section
  class="ant-layout"
>
  <header
    class="header ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </header>
  <section
    class="ant-layout"
  >
    <aside
      class="ant-layout-sider ant-layout-sider-dark"
      style="background:#fff;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
    >
      <div
        class="ant-layout-sider-children"
      >
        <ul
          class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
          role="menu"
          style="height:100%;border-right:0"
        >
          <li
            class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
            role="menuitem"
          >
            <div
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="sub1$Menu"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  aria-label="icon: user"
                  class="anticon anticon-user"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#user"
                    />
                  </svg>
                </i>
                subnav 1
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <ul
              class="ant-menu  ant-menu-sub ant-menu-inline"
              id="sub1$Menu"
              role="menu"
            >
              <li
                class="ant-menu-item ant-menu-item-selected"
                role="menuitem"
                style="padding-left:48px"
              >
                option1
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option2
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option3
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option4
              </li>
            </ul>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-inline"
            role="menuitem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  aria-label="icon: laptop"
                  class="anticon anticon-laptop"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#laptop"
                    />
                  </svg>
                </i>
                subnav 2
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-inline"
            role="menuitem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  aria-label="icon: notification"
                  class="anticon anticon-notification"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#notification"
                    />
                  </svg>
                </i>
                subnav 3
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
        </ul>
      </div>
    </aside>
    <section
      class="ant-layout"
      style="padding:0 24px 24px"
    >
      <div
        class="ant-breadcrumb"
        style="margin:16px 0"
      >
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            Home
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            List
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            App
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <main
        class="ant-layout-content"
        style="background:#fff;padding:24px;margin:0;min-height:280px"
      >
        Content
      </main>
    </section>
  </section>
</section>
`;
